src/shared/components/hero-section/index.module.css
@import "shared/styles/imports/variables.css";
@import "shared/styles/imports/custom-medias.css";

:root {
    --info-transition-duration: 1500ms;
}

@keyframes orbit {
    from { transform: rotateZ(0deg); }
    to { transform: rotateZ(360deg); }
}

.wrapperContainer {
    min-height: 100vh;

    &.animationOff * {
        animation-play-state: paused !important;
    }
}

.container {
    position: relative;
    width: 100%;
    min-height: 100vh;
    overflow: hidden;
    display: flex;
    justify-content: center;
    align-items: center;
    background: var(--color-dark-blue);
    color: var(--color-white);

    & .localesBar {
        position: absolute;
        top: 0;
        width: 100%;
        z-index: 2;
    }

    & .orbitContainer {
        position: absolute;
        top: -7%;
        width: 100%;
        height: 100%;
        display: flex;
        justify-content: center;
        align-items: center;

        & .orbits {
            position: relative;
            width: 90%;
            display: flex;
            justify-content: center;
            align-items: center;

            & .outsideRing,
            & .middleRing,
            & .insideRing {
                position: absolute;
                width: 100%;
                height: 100%;
                display: flex;
                align-items: center;

                & svg {
                    width: 100%;
                    height: auto;
                }
            }

            & .outsideRing {
                animation: orbit 300s infinite linear;
            }

            & .middleRing {
                animation: orbit 200s infinite linear;
            }

            & .insideRing {
                animation: orbit 120s infinite linear;
            }

        }
    }

    & .content {
        width: var(--container-width);
        max-width: var(--max-container-width);
        height: 100%;
        z-index: 1;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;

        & svg {
            width: 29%;
            height: auto;
            margin: 0 0 1.5% 4%;
        }

        & h1 {
            font-weight: var(--typography-text-weight-semibold);
            text-transform: unset;
            text-align: center;
            line-height: var(--line-height-large);
        }

        & .textDesc {
            max-width: 70%;

            & p {
                font-size: var(--typography-text-size);
                font-weight: var(--typography-text-weight-light);
                text-align: center;
                line-height: var(--line-height-medium);
            }
        }

        & .infoContainer {
            width: 100%;
            margin-top: 2%;
            padding-bottom: calc(var(--bottom-half-height) * 2);
            opacity: 1;
            color: var(--color-light-blue);
            font-family: var(--typography-roboto-text-font);
            font-size: var(--typography-text-size-mobile);
            transition: opacity var(--info-transition-duration) ease;

            &.hidden {
                opacity: 0;
                transition: opacity 0ms ease;
            }

            & div {
                width: 100%;
                display: flex;
                flex-wrap: wrap;
                justify-content: center;
                align-items: center;

                & span:not(:last-child) {
                    margin-right: 4%;
                }
            }
        }
    }
}

@media (--layout-lte-small) {
    .container {
        & .orbitContainer {
            display: none;
        }

        & .content {
            width: var(--container-width-mobile);
            padding-top: 30%;

            & svg {
                width: 75%;
                max-width: 300px;
                margin: 0 0 10% 10%;
            }

            & .textDesc {
                & p {
                    font-size: var(--typography-text-size);
                }
            }

            & .infoContainer div {
                flex-direction: column;

                & span {
                    margin: 12px 0 0 0;
                }
            }
        }
    }
}

@media (--layout-lte-medium) {
    .container {
        & .orbitContainer {
            width: 125%;
        }

        & .content .textDesc {
            max-width: 90%;
        }
    }
}

@media (--layout-gte-xxlarge) {
    .container {
        & .orbitContainer {
            width: 75%;
        }
    }
}

